# nancy

./: .env  .gitignore  Cargo.toml  README.md
games/: ninja-turtles.json
src/: data.rs  error.rs  lib.rs  main.rs
src/games/: game.rs  link.rs  mod.rs  sequence.rs  traits.rs
