[package]
name = "nancy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "^0.10.8"
serde = { version="^1.0", features=["derive"] }
serde_json = "^1.0"
tokio = { version="^1.9", features=["rt-multi-thread"] }
log = "^0.4"
simple_logger = "^1.12"
async-trait = "^0.1.51"
